# OptiCat

./: LICENSE  README.md  Run.ipynb  check.ipynb  main.ipynb  pyproject.toml  requirements.txt  run_supercat.py
Tmp/: coms.py  main.ipynb  run_notebook_mode.py  sample.ipynb  scheme_export.py
src/opticat/: __init__.py  __main__.py  components.py  core.py  gui.py  signals.py
