[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opticat"
version = "0.1.0"
description = "OptiCat: visual optical/electrical link simulation tool"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "plotly>=5.20",
    "matplotlib>=3.8",
    "ipython>=8.12",
    "ipywidgets>=8.1",
    "ipympl>=0.9",
    "kaleido>=0.2.1",
]

[project.scripts]
opticat = "opticat.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
